[package]
name = "clap-nested"
version = "0.2.1"
description = "A convenient `clap` setup for multi-level CLI commands."
authors = ["Sky Mavis Engineering <engineering@skymavis.com>"]
license = "MIT"
homepage = "https://github.com/skymavis/clap-nested"
repository = "https://github.com/skymavis/clap-nested"
categories = ["command-line-interface"]
keywords = ["clap", "clap-rs", "multi-level", "cli", "subcommand"]
include = ["src/**/*", "LICENSE", "README.md"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[badges]
travis-ci = { repository = "skymavis/clap-nested", branch = "master" }
coveralls = { repository = "skymavis/clap-nested", branch = "master" }
is-it-maintained-issue-resolution = { repository = "skymavis/clap-nested" }
is-it-maintained-open-issues = { repository = "skymavis/clap-nested" }
maintenance = { status = "passively-maintained" }

[dependencies]
clap = "^2.33.0"
